API Server: handling requests for user sign up, user log in, statistics, guest accounts; Preliminary request validation for request bodies and parameters; DBConnection class methods for querying users, statistics and guests tables
